# Rexit-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Engine/: CMakeLists.txt
Engine/include/: Application.h  EntryPoint.h  Rexit.h  Shader.h  Window.h
Engine/include/glad/: glad.h
Engine/src/: Application.cpp  Shader.cpp  Window.cpp
shaders/: simple.fs.glsl  simple.vs.glsl
src/: glad.c  lib.cpp  main.cpp
